# KPQClean

./: README.md
WG1/pke-ROLLO/src/codes/lrpc/: CMakeLists.txt
WG1/pke-ROLLO/src/schemes/biix/: CMakeLists.txt  biix_kem.c
WG1/pke-ROLLO/src/schemes/rolloI/: CMakeLists.txt
WG1/pke-ROLLO/test/benchmark/rolloII/: CMakeLists.txt
WG1/pke-ROLLO/test/constant_time_test/rbc_elt/: CMakeLists.txt
WG1/pke-ROLLO/test/kat/kat/: CMakeLists.txt
WG1/pke-ROLLO/test/unit_test/rbc_elt/: CMakeLists.txt  test_rbc_elt.cpp
WG1/pke-ROLLO/test/unit_test/rbc_poly/: CMakeLists.txt  test_rbc_poly.cpp
WG1/pke-ROLLO_revised1020/src/core/: CMakeLists.txt  polynomial_db  rbc_core_utils.py
WG1/pke-ROLLO_revised1020/src/core/rbc_elt/: rbc_elt.h  rbc_elt_get_coefficient.h  rbc_elt_get_coefficient.py  rbc_elt_inv.c  rbc_elt_is_equal_to.h  rbc_elt_is_greater_than.c  rbc_elt_nth_root.c  rbc_elt_print.py  rbc_elt_set.h  rbc_elt_set_coefficient.py  rbc_elt_set_from_uint64.h  rbc_elt_set_random.c  rbc_elt_sqr.c  rbc_elt_ur_print.h  rbc_elt_ur_set_from_uint64.h  rbc_field_init.py
WG1/pke-ROLLO_revised1020/src/core/rbc_poly/: rbc_poly_add.c  rbc_poly_add.h  rbc_poly_from_string.h  rbc_poly_is_equal_to.c  rbc_poly_set_random_from_support.c  rbc_poly_set_random_full_rank.c  rbc_poly_set_random_pair_from_support.c  rbc_poly_set_zero.c  rbc_poly_sparse_clear.c  rbc_poly_sparse_clear.h  rbc_poly_sparse_print.c
WG1/pke-ROLLO_revised1020/src/core/rbc_qre/: rbc_qre_add.c  rbc_qre_clear_modulus.h  rbc_qre_from_string.h  rbc_qre_init_modulus.c  rbc_qre_is_equal_to.h  rbc_qre_print.c  rbc_qre_print.h  rbc_qre_set_random_from_support.h  rbc_qre_set_random_full_rank.c  rbc_qre_to_string.c
WG1/pke-ROLLO_revised1020/src/core/rbc_vec/: rbc_vec.c  rbc_vec_add.c  rbc_vec_add.h  rbc_vec_clear.c  rbc_vec_from_string.h  rbc_vec_gauss.h  rbc_vec_get_rank.c  rbc_vec_init.h  rbc_vec_scalar_mul.c  rbc_vec_scalar_mul.h  rbc_vec_set.c  rbc_vec_set_random_from_support.c  rbc_vec_set_random_full_rank_with_one.c  rbc_vec_set_random_pair_from_support.c  rbc_vec_set_zero.h
WG1/pke-ROLLO_revised1020/src/core/rbc_vspace/: rbc_vspace.c  rbc_vspace.h  rbc_vspace_clear.h  rbc_vspace_direct_sum.c  rbc_vspace_direct_sum.h  rbc_vspace_init.c  rbc_vspace_print.h  rbc_vspace_set.c  rbc_vspace_set_random_full_rank_with_one.c
WG1/pke-ROLLO_revised1020/test/benchmark/rolloI/: CMakeLists.txt
WG2/pke-ROLLO/: .config_git_c64.yml  .gitignore  .project  changelog  config.yml  pyproject.toml
WG2/pke-ROLLO/lib/random_source/: CMakeLists.txt  random_source.c
WG2/pke-ROLLO/lib/randombytes-nist/: CMakeLists.txt
WG2/pke-ROLLO/lib/randombytes-pqclean/: CMakeLists.txt
WG2/pke-ROLLO/lib/seedexpander-nist/: CMakeLists.txt
WG2/pke-ROLLO/lib/seedexpander-pqclean/: CMakeLists.txt  seedexpander.c  seedexpander.h
WG2/pke-ROLLO/lib/sha2-openssl/: CMakeLists.txt  sha2.c
WG2/pke-ROLLO/lib/sha2-portable/: CMakeLists.txt
WG2/pke-ROLLO/script/packaging/: packaging_mupq.py  packaging_nist_rolloI.py  packaging_nist_rolloII.py  packaging_nist_rqc.py
WG2/pke-ROLLO/script/packaging/mupq/: api.h
WG2/pke-ROLLO/script/packaging/rolloI/: main_kat.c  main_rolloI.c
WG2/pke-ROLLO/script/packaging/rolloII/: main_rolloII.c
WG2/pke-ROLLO/script/packaging/rqc/: main_rqc.c
WG2/pke-ROLLO/script/preprocessing/: preprocessing_example.py  preprocessing_kat.py  preprocessing_src_cmake.py  preprocessing_src_core.py  templating_src.py
WG2/pke-ROLLO/script/preprocessing/templating/: BII_b3.yml  rqc.yml
WG2/pke-ROLLO/script/testing/: testing_cst_time.py  testing_memory_leak.py  testing_unit_test.py
WG2/pke-ROLLO/src/: CMakeLists.txt
WG2/pke-ROLLO/src/codes/gabidulin/: CMakeLists.txt  rbc_gabidulin.c  rbc_qpoly.h
WG2/pke-ROLLO/src/codes/lrpc/: rbc_lrpc.h
WG2/pke-ROLLO/src/core/: polynomial_db
WG2/pke-ROLLO/src/core/rbc_elt/: rbc_elt.c  rbc_elt_add.py  rbc_elt_get_degree.h  rbc_elt_inv.h  rbc_elt_is_greater_than.h  rbc_elt_is_zero.c  rbc_elt_is_zero.h  rbc_elt_mul.c  rbc_elt_mul.h  rbc_elt_nth_root.h  rbc_elt_print.h  rbc_elt_set.py  rbc_elt_set_from_uint64.py  rbc_elt_set_mask1.py  rbc_elt_set_mask2.h  rbc_elt_set_one.c  rbc_elt_set_one.h  rbc_elt_set_random.h  rbc_elt_set_zero.c  rbc_elt_set_zero.h  rbc_elt_ur_mul.py  rbc_elt_ur_set.h  rbc_elt_ur_set_zero.c  rbc_elt_ur_set_zero.h  rbc_elt_ur_sqr.h
WG2/pke-ROLLO/src/core/rbc_poly/: rbc_poly_clear.h  rbc_poly_init.c  rbc_poly_init.h  rbc_poly_inv.h  rbc_poly_is_equal_to.h  rbc_poly_mul.c  rbc_poly_mul.h  rbc_poly_mulmod_sparse.h  rbc_poly_print.c  rbc_poly_set.c  rbc_poly_set_random_full_rank_with_one.c  rbc_poly_set_random_full_rank_with_one.h  rbc_poly_set_zero.h  rbc_poly_sparse_init.c  rbc_poly_to_string.c  rbc_poly_to_string.h
WG2/pke-ROLLO/src/core/rbc_qre/: rbc_qre.c  rbc_qre.h  rbc_qre_add.h  rbc_qre_clear.h  rbc_qre_clear_modulus.c  rbc_qre_get_modulus.h  rbc_qre_get_modulus.py  rbc_qre_init.c  rbc_qre_init.h  rbc_qre_init_modulus.h  rbc_qre_inv.c  rbc_qre_is_equal_to.c  rbc_qre_mul.h  rbc_qre_set_random.c  rbc_qre_set_random.h  rbc_qre_set_random_from_support.c  rbc_qre_set_random_full_rank.h  rbc_qre_set_random_pair_from_support.c  rbc_qre_set_zero.c  rbc_qre_set_zero.h  rbc_qre_to_string.h
WG2/pke-ROLLO/src/core/rbc_vec/: rbc_vec.h  rbc_vec_echelonize.c  rbc_vec_echelonize.h  rbc_vec_from_string.c  rbc_vec_gauss.c  rbc_vec_init.c  rbc_vec_print.h  rbc_vec_set.h  rbc_vec_set_random.c  rbc_vec_set_random.h  rbc_vec_set_random_full_rank.c  rbc_vec_set_random_full_rank.h  rbc_vec_set_random_full_rank_with_one.h  rbc_vec_set_random_pair_from_support.h  rbc_vec_set_zero.c  rbc_vec_to_string.c  rbc_vec_to_string.h
WG2/pke-ROLLO/src/core/rbc_vspace/: rbc_vspace_clear.c  rbc_vspace_init.h  rbc_vspace_intersection.h  rbc_vspace_print.c  rbc_vspace_product.c  rbc_vspace_product.h  rbc_vspace_set_random_full_rank_with_one.h  rbc_vspace_set_zero.c  rbc_vspace_set_zero.h
WG2/pke-ROLLO/test/benchmark/: CMakeLists.txt
WG2/pke-ROLLO/test/example/: CMakeLists.txt
WG2/pke-ROLLO/test/kat/: CMakeLists.txt
WG2/pke-ROLLO/test/kat/kat/: main.c
WG2/pke-ROLLO/test/unit_test/: CMakeLists.txt  utils.h
(+923 files in other folders)
